compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__strings__assert_string_prefix.snap
---
source: compiler-core/src/erlang/tests/strings.rs
expression: "\npub fn main(x) {\n  let assert \"m-\" <> rest = x\n  rest\n}\n"
---
----- SOURCE CODE

pub fn main(x) {
  let assert "m-" <> rest = x
  rest
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([main/1]).

-spec main(binary()) -> binary().
main(X) ->
    case X of
        <<"m-"/utf8, Rest/binary>> ->
            Rest;

        _value ->
            erlang:error(#{
                gleam_error => let_assert,
                message => ~"Pattern match failed, no pattern matched the value.",
                file => ~"project/test/my/mod.gleam",
                module => ~"my/mod",
                function => ~"main",
                line => 3,
                value => _value,
                start => 20,
                'end' => 47,
                pattern_start => 31,
                pattern_end => 43
            })
    end.
