compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__strings__string_prefix_assignment_not_unicode_escape_sequence.snap
---
source: compiler-core/src/erlang/tests/strings.rs
expression: "\npub fn go(x) {\n  let _ = case x {\n    \"\\\\u{9}\" as start <> rest -> \"test\"\n    \"\\\\u{000009}\" as start <> rest -> \"test\"\n    \"\\\\u{21}\" as start <> rest -> \"test\"\n    \"\\\\u{100}\" as start <> rest -> \"test\"\n    \"\\\\u{1000}\" as start <> rest -> \"test\"\n    \"\\\\u{1F600}\" as start <> rest -> \"test\"\n    \"\\\\u{1f600}\" as start <> rest -> \"test\"\n    \"\\\\u{01F600}\" as start <> rest -> \"test\"\n    \"\\\\u{01f600}\" as start <> rest -> \"test\"\n    \"\\\\u{9} \\\\u{000009} \\\\u{21} \\\\u{100} \\\\u{1000} \\\\u{1F600} \\\\u{01F600}\" as start <> rest -> \"test\"\n    _ -> \"Unknown\"\n  }\n}\n"
---
----- SOURCE CODE

pub fn go(x) {
  let _ = case x {
    "\\u{9}" as start <> rest -> "test"
    "\\u{000009}" as start <> rest -> "test"
    "\\u{21}" as start <> rest -> "test"
    "\\u{100}" as start <> rest -> "test"
    "\\u{1000}" as start <> rest -> "test"
    "\\u{1F600}" as start <> rest -> "test"
    "\\u{1f600}" as start <> rest -> "test"
    "\\u{01F600}" as start <> rest -> "test"
    "\\u{01f600}" as start <> rest -> "test"
    "\\u{9} \\u{000009} \\u{21} \\u{100} \\u{1000} \\u{1F600} \\u{01F600}" as start <> rest -> "test"
    _ -> "Unknown"
  }
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([go/1]).

-spec go(binary()) -> binary().
go(X) ->
    _ = case X of
        <<"\\u{9}"/utf8, Rest/binary>> ->
            Start = ~"\\u{9}",
            ~"test";

        <<"\\u{000009}"/utf8, Rest@1/binary>> ->
            Start@1 = ~"\\u{000009}",
            ~"test";

        <<"\\u{21}"/utf8, Rest@2/binary>> ->
            Start@2 = ~"\\u{21}",
            ~"test";

        <<"\\u{100}"/utf8, Rest@3/binary>> ->
            Start@3 = ~"\\u{100}",
            ~"test";

        <<"\\u{1000}"/utf8, Rest@4/binary>> ->
            Start@4 = ~"\\u{1000}",
            ~"test";

        <<"\\u{1F600}"/utf8, Rest@5/binary>> ->
            Start@5 = ~"\\u{1F600}",
            ~"test";

        <<"\\u{1f600}"/utf8, Rest@6/binary>> ->
            Start@6 = ~"\\u{1f600}",
            ~"test";

        <<"\\u{01F600}"/utf8, Rest@7/binary>> ->
            Start@7 = ~"\\u{01F600}",
            ~"test";

        <<"\\u{01f600}"/utf8, Rest@8/binary>> ->
            Start@8 = ~"\\u{01f600}",
            ~"test";

        <<"\\u{9} \\u{000009} \\u{21} \\u{100} \\u{1000} \\u{1F600} \\u{01F600}"/utf8, Rest@9/binary>> ->
            Start@9 = ~"\\u{9} \\u{000009} \\u{21} \\u{100} \\u{1000} \\u{1F600} \\u{01F600}",
            ~"test";

        _ ->
            ~"Unknown"
    end.
